# tree-sitter-tmux

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  __init__.py.in  binding.gyp  go.mod  grammar.js  grammar.js.bak  package.json  pyproject.toml  requirements.txt  setup.py  shell.nix  tree-sitter-tmux-scm-1.rockspec  tree-sitter.json
.github/workflows/: main.yml
bindings/c/: tree-sitter-tmux.h  tree-sitter-tmux.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_tmux/: __init__.py  __main__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTmuxTests/: TreeSitterTmuxTests.swift
queries/: context.scm  folds.scm  highlights.scm  injections.scm  schema.scm  textobjects.scm
requirements/: colorize.txt
scripts/: upload.sh
src/: grammar.json  node-types.json  parser.c
test/corpus/: alias.txt  bind.txt  command-separator.txt  comment.txt  compound-statements.txt  env-var.txt  example.txt  expression.txt  if-shell.txt  if-statement.txt  new-session.txt  new-window.txt  refresh-client.txt  resize-pane.txt  run-shell.txt  select-pane.txt  select-window.txt  send-key.txt  set.txt  shell-rest.txt  split-window.txt  str-escape.txt  str.txt  string.txt  var.txt  variable.txt
tests/: test___init__.py  tmux.conf
