[package]
name = "tree-sitter-tmux"
description = "tmux grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "tmux"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/Freed-Wu/tree-sitter-tmux"
edition = "2018"
license = "GPL-3.0-or-later"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
