[package]
name = "tree-sitter-tmux"
description = "Tmux grammar for tree-sitter"
version = "0.0.4"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "tmux"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-tmux"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.22.2"

[build-dependencies]
cc = "1.0.87"
